apps/ntfy/the-intersect/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: ntfy-httproute
  namespace: ntfy
spec:
  parentRefs:
    - name: external-gateway-https
      namespace: cilium-ingress
  hostnames: ["${SUB_SENIOR_STAR}.${DOMAIN_CORONET_SUMMIT}"]
  rules:
    - backendRefs:
        - name: ntfy-svc
          port: 80
